--- a/frontend/app/login/login.css
+++ b/frontend/app/login/login.css
@@ -1,4 +1,18 @@
-.loginPage{
+body{
+    box-sizing: border-box;
     background-color: black;
     color: #cccccc;
+    font-family: 'orbitron';
+}
+.loginPage{
+    height: 90vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.err{
+    color: red;
 }
